[package]
name = "hls-server"
version = "0.1.0"
authors = ["john ag john <john@createentrance.com>"]

[dependencies]
actix = "0.7"
actix-web = { version = "0.7", features = ["alpn"] }
bytes = "0.4"
chrono = "0.4"
dotenv = "0.13"
env_logger = "0.5"
failure = "0.1"
futures = "0.1"
hostname = "0.1"
log = { version = "0.4", features = ["max_level_trace", "release_max_level_info"] }
num_cpus = "1.8"
redis_cluster_rs = "0.1"
regex = "1.0"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
serde_regex = "0.3"
sha2 = "0.7"
tokio = "0.1"
toml = "0.4"
